# WitMotionBLE

./: CMakeLists.txt  README.md  WT9011BleLib.sln
.github/workflow/: build.yml
.github/workflows/: build.yml  build_and_release.yml  build_app.yml  release.yml
WT9011BleLib/: BleManager.cs  WT9011BleLib.csproj
WT9011TestApp/: Program.cs  WT9011TestApp.csproj
dll_lib/: CMakeLists.txt  README.md  main.cpp  py_module.cpp  py_module.cpp   wt9011_dll.cpp
examples/: README.md  example_data.py  example_functions.py  example_ui.py
examples/app/: main.cpp  qcustomplot.cpp  qcustomplot.h  wt9011_app.pro  wt9011_app_dev.pro  wt9011_interface.cpp  wt9011_interface.h
examples/app/lib/: README.md  ble_manager.py  sensor_parser.py
lib/: ble_manager.py  sensor_commands.py  sensor_parser.py
src/: BleDeviceManager.cpp  BleDeviceManager.h  WT9011Parser.cpp  WT9011Parser.h  main.cpp
